; ModuleID = '/home/carl/AnghaBench/lede/package/lean/shortcut-fe/src/extr_sfe_ipv4.c_sfe_ipv4_get_debug_dev.c'
source_filename = "/home/carl/AnghaBench/lede/package/lean/shortcut-fe/src/extr_sfe_ipv4.c_sfe_ipv4_get_debug_dev.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sfe_ipv4 = type { i32, i32 }
%struct.device = type { i32 }
%struct.device_attribute = type { i32 }

@__si = common dso_local global %struct.sfe_ipv4 zeroinitializer, align 4
@PAGE_SIZE = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.device_attribute*, i8*)* @sfe_ipv4_get_debug_dev to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sfe_ipv4_get_debug_dev(%struct.device* %0, %struct.device_attribute* %1, i8* %2) #0 {
  %4 = alloca %struct.device*, align 8
  %5 = alloca %struct.device_attribute*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.sfe_ipv4*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %4, align 8
  store %struct.device_attribute* %1, %struct.device_attribute** %5, align 8
  store i8* %2, i8** %6, align 8
  store %struct.sfe_ipv4* @__si, %struct.sfe_ipv4** %7, align 8
  %10 = load %struct.sfe_ipv4*, %struct.sfe_ipv4** %7, align 8
  %11 = getelementptr inbounds %struct.sfe_ipv4, %struct.sfe_ipv4* %10, i32 0, i32 1
  %12 = call i32 @spin_lock_bh(i32* %11)
  %13 = load %struct.sfe_ipv4*, %struct.sfe_ipv4** %7, align 8
  %14 = getelementptr inbounds %struct.sfe_ipv4, %struct.sfe_ipv4* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  store i32 %15, i32* %9, align 4
  %16 = load %struct.sfe_ipv4*, %struct.sfe_ipv4** %7, align 8
  %17 = getelementptr inbounds %struct.sfe_ipv4, %struct.sfe_ipv4* %16, i32 0, i32 1
  %18 = call i32 @spin_unlock_bh(i32* %17)
  %19 = load i8*, i8** %6, align 8
  %20 = load i64, i64* @PAGE_SIZE, align 8
  %21 = trunc i64 %20 to i32
  %22 = load i32, i32* %9, align 4
  %23 = call i32 @snprintf(i8* %19, i32 %21, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 %22)
  store i32 %23, i32* %8, align 4
  %24 = load i32, i32* %8, align 4
  ret i32 %24
}

declare dso_local i32 @spin_lock_bh(i32*) #1

declare dso_local i32 @spin_unlock_bh(i32*) #1

declare dso_local i32 @snprintf(i8*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
